objects/Bulk_Upload_Data__c.object
<CustomObject>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <referenceTo>Bulk_Upload_Donations__c</referenceTo>
        <relationshipLabel>Bulk Upload Data</relationshipLabel>
        <relationshipName>Bulk_Upload_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GAU Allocation</label>
        <referenceTo>npsp__Allocation__c</referenceTo>
        <relationshipLabel>Bulk Upload Data</relationshipLabel>
        <relationshipName>Bulk_Upload_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Allocation_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Allocation Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opportunity Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bulk Upload Data</relationshipLabel>
        <relationshipName>Bulk_Upload_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Bulk Upload Data</relationshipLabel>
        <relationshipName>Bulk_Upload_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Index__c</fullName>
        <label>Row Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agencyFees__c</fullName>
        <label>agencyFees</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bankReference__c</fullName>
        <label>bankReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bank__c</fullName>
        <label>bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currCode__c</fullName>
        <label>currCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>donorId__c</fullName>
        <label>donorId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fundRaisingUrl__c</fullName>
        <label>fundRaisingUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaEligible__c</fullName>
        <label>gaEligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>itemCode__c</fullName>
        <label>itemCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>medium__c</fullName>
        <label>medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netDonationAmount__c</fullName>
        <label>netDonationAmount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentMethod__c</fullName>
        <label>paymentMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryCampaignSource__c</fullName>
        <label>primaryCampaignSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>regionalOffice__c</fullName>
        <label>regionalOffice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfAccountId__c</fullName>
        <label>sfAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfContactId__c</fullName>
        <label>sfContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stipulation__c</fullName>
        <label>stipulation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionSource__c</fullName>
        <label>transactionSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bulk Upload Data</label>
    <nameField>
        <displayFormat>BUDN-{0000}</displayFormat>
        <label>Bulk Upload Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>